// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should Render default header 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="d-flex"
          >
            <div
              class="me-auto p-2"
            >
              <div>
                <b>
                  Netflix
                </b>
                roulette
              </div>
            </div>
            <div>
              <button
                class="btn btn-primary"
                type="button"
              >
                + Add Movie
              </button>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="p-5 col"
            >
              <form
                class="d-flex justify-content-center"
              >
                <label
                  for="movieName"
                >
                  Find your movie
                </label>
                <input
                  id="movieName"
                  type="text"
                  value=""
                />
                <button
                  class="btn btn-primary"
                  type="submit"
                >
                  Search
                </button>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="d-flex"
        >
          <div
            class="me-auto p-2"
          >
            <div>
              <b>
                Netflix
              </b>
              roulette
            </div>
          </div>
          <div>
            <button
              class="btn btn-primary"
              type="button"
            >
              + Add Movie
            </button>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="p-5 col"
          >
            <form
              class="d-flex justify-content-center"
            >
              <label
                for="movieName"
              >
                Find your movie
              </label>
              <input
                id="movieName"
                type="text"
                value=""
              />
              <button
                class="btn btn-primary"
                type="submit"
              >
                Search
              </button>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Header /> should Render header displaying a movie 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="d-flex"
          >
            <div
              class="me-auto p-2"
            >
              <div>
                <b>
                  Netflix
                </b>
                roulette
              </div>
            </div>
            <div>
              <button
                class="btn btn-primary"
                data-testid="search-movie-button"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="p-4 col-md-4"
            >
              <img
                class="card-img-top"
              />
            </div>
            <div
              class="p-5 title-movie-selected col"
            >
              <h1>
                A movie
                 - 
                <span
                  class="h4"
                />
              </h1>
              <h6 />
              <div
                class="p-3 row"
              >
                <div
                  class="col-2"
                />
                <div
                  class="col"
                />
              </div>
              <p>
                An overview
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="d-flex"
        >
          <div
            class="me-auto p-2"
          >
            <div>
              <b>
                Netflix
              </b>
              roulette
            </div>
          </div>
          <div>
            <button
              class="btn btn-primary"
              data-testid="search-movie-button"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="p-4 col-md-4"
          >
            <img
              class="card-img-top"
            />
          </div>
          <div
            class="p-5 title-movie-selected col"
          >
            <h1>
              A movie
               - 
              <span
                class="h4"
              />
            </h1>
            <h6 />
            <div
              class="p-3 row"
            >
              <div
                class="col-2"
              />
              <div
                class="col"
              />
            </div>
            <p>
              An overview
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Header /> should Render header displaying a movie and unselecting it when state change 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="d-flex"
          >
            <div
              class="me-auto p-2"
            >
              <div>
                <b>
                  Netflix
                </b>
                roulette
              </div>
            </div>
            <div>
              <button
                class="btn btn-primary"
                type="button"
              >
                + Add Movie
              </button>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="p-5 col"
            >
              <form
                class="d-flex justify-content-center"
              >
                <label
                  for="movieName"
                >
                  Find your movie
                </label>
                <input
                  id="movieName"
                  type="text"
                  value=""
                />
                <button
                  class="btn btn-primary"
                  type="submit"
                >
                  Search
                </button>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="d-flex"
        >
          <div
            class="me-auto p-2"
          >
            <div>
              <b>
                Netflix
              </b>
              roulette
            </div>
          </div>
          <div>
            <button
              class="btn btn-primary"
              type="button"
            >
              + Add Movie
            </button>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="p-5 col"
          >
            <form
              class="d-flex justify-content-center"
            >
              <label
                for="movieName"
              >
                Find your movie
              </label>
              <input
                id="movieName"
                type="text"
                value=""
              />
              <button
                class="btn btn-primary"
                type="submit"
              >
                Search
              </button>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
